--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     </div>
   </footer>
   <script>
-    const API_FILES = "http://localhost:8080/files"; // 🔥 실제 서버 주소로 교체
+    const API_FILES = "https://companybackend-production.up.railway.app/files"; // 🔥 실제 서버 주소로 교체
 
     async function loadReports() {
       try {
